--- a/tools/MolD_Galaxy/.shed.yml
+++ b/tools/MolD_Galaxy/.shed.yml
@@ -1,13 +1,7 @@
 categories:
-- Convert Formats
-description: Converts genetic sequences between different formats
+- Phylogenetics
+description: Identify robust sets of diagnostic sites for pre-defined taxa from DNA sequences
 homepage_url: <http://itaxotools.org>
-long_description: 'Supported formats: tab: [Internal tab format], tab_noheaders: [Internal
-  tab format] without headers, fasta: FASTA format, relaxed_phylip: relaxed Phylip
-  format, fasta_hapview: FASTA format for Haplotype Viewer, phylip: Phylip format,
-  fastq: FASTQ format, fasta_gbexport: FASTA format for export into Genbank repository,
-  nexus: NEXUS format, nexml: DnaCharacterMatrix in NeXML format, genbank: Genbank
-  flat file format, mold_fasta: FASTA format with sequence name matching requirements
-  for the tool MolD.'
-name: dna_convert
+long_description: MolD 1.4 is tailored to seamlessly recover DNA-based diagnoses from large DNA datasets and is capable of identifying diagnostic combinations of nucleotides (DNCs) in addition to single (pure) diagnostic sites, enabling users to base DNA diagnoses on a minimal number of diagnostic sites necessary for a reliable differentiation of taxa, rather than providing a long list of such sites. The MolD algorithm assembles DNA diagnoses that fulfill pre-defined criteria of reliability, which is achieved by repeatedly scoring diagnostic nucleotide combinations against datasets of in silico mutated sequences. 
+name: mold
 owner: ffischell
