--- a/tools/latlon-converter/.shed.yml
+++ b/tools/latlon-converter/.shed.yml
@@ -1,9 +1,7 @@
-categories:
+categories: 
 - Phylogenetics
-description: Converts latitude and longitude into a stardard form
+description: Convert latitude and longitude from different formats into decimal format
 homepage_url: <http://itaxotools.org>
-long_description: 'Converts latitude and longitude into a stardard form. Input may be ANSI (Windows ISO-8859-1) or UTF-8 (Linux) encoded. Output will be UTF-8 (default) or both. 
-The input file should contain coordinates in maximum two (tab-separated) columns. First line can be a heading with column headings being one of: 'lat', 'latitude', 'lon', 'longitude', 'latlon', 'lonlat', 'lat-lon', 'lon-lat'.
-The output file is a tab-separated table with original coordinates and standard formattings of them.'
-name: latlon-converter
+long_description: The input file should contain coordinates in maximum two (tab-separated) columns. First line can be a heading with column headings being one of lat, latitude, lon, longitude, latlon, lonlat, lat-lon, lon-lat. See the iTaxoTools manual for more precise information on the format. The output file is a tab-separated table with original coordinates and standard decimal formattings of them.Input may be ANSI (Windows ISO-8859-1) or UTF-8 (Linux) encoded. Output will be UTF-8 (default) or both. Galaxy can  display the UTF-8 output,  ANSI can only be downloaded.
+name: latlon_converter
 owner: ffischell
